--- a/MouseRecorder/MainWindow.xaml
+++ b/MouseRecorder/MainWindow.xaml
@@ -5,13 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MouseRecorder"
         mc:Ignorable="d"
-        Title="MainWindow" Height="140" Width="325">
+        Title="MainWindow" Height="140" Width="350">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="3*"/>
-            <RowDefinition Height="3*"/>
-            <RowDefinition Height="3*"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -33,7 +32,10 @@
             <Image Source="/Assets/RecordButton.png" RenderOptions.BitmapScalingMode="HighQuality"/>
         </Button>
 
-        <Button x:Name="SettingsButton" Grid.Column="4" Background="Transparent" Content="⚙️" FontSize="16" Margin="5" HorizontalAlignment="Center" BorderThickness="0" Click="SettingsButton_Click"/>
+        <Button x:Name="SettingsButton" Grid.Column="3" Background="Transparent" Margin="5" BorderThickness="0" HorizontalAlignment="Center" Click="SettingsButton_Click">
+            <Image Source="/Assets/SettingsButton.png" RenderOptions.BitmapScalingMode="HighQuality"/>
+        </Button>
+
         
         <!-- MOUSE POSITION PLACEHOLDER -->
         <!--
@@ -46,25 +48,24 @@
         <!-- END OF THE PLACEHOLDER -->
 
         <!-- Row 1-->
-        <Label Grid.Row="1" Grid.Column="0" Content="Playback:" FontSize="14" FontFamily="Bahnschrift" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Label Grid.Row="1" Grid.Column="0" Content="Playback:" FontSize="14" FontFamily="Bahnschrift" HorizontalAlignment="Center" VerticalAlignment="Center"/>
 
-        <ComboBox x:Name="ComboBox" IsEditable="True" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" Height="20" Width="230"
+        <ComboBox x:Name="ComboBox"
+                  ItemsSource="{Binding ComboBoxEntries}"
+                  SelectedItem="{Binding CurrentlySelectedRecording, Mode=TwoWay}"
+                  IsEditable="True" IsTextSearchEnabled="True" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" Height="20" Width="200"
                   SelectedIndex="0" Margin="0,0,10,0"
                   HorizontalAlignment="Right" VerticalAlignment="Center" HorizontalContentAlignment="Left" VerticalContentAlignment="Center"/>
 
         <!-- Row 2-->
-        <Label Grid.Row="2" Grid.Column="0" Content="Status:" FontSize="14" FontFamily="Bahnschrift" HorizontalAlignment="Center" VerticalAlignment="Bottom"/>
+        <Label Grid.Row="2" Grid.Column="0" Content="Status:" FontSize="14" FontFamily="Bahnschrift" HorizontalAlignment="Center" VerticalAlignment="Center"/>
 
-        <Label x:Name="lblStatus" Grid.Row="2" Grid.Column="1" Content="Idle" FontSize="14" FontFamily="Bahnschrift" HorizontalAlignment="Left" VerticalAlignment="Bottom" HorizontalContentAlignment="Center"/>
+        <Label x:Name="lblStatus" Grid.Row="2" Grid.Column="1" Content="Idle" FontSize="14" FontFamily="Bahnschrift" HorizontalAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Center"/>
 
-        <CheckBox x:Name="chbxInfiniteLoop" Grid.Row="2" Grid.Column="2" Content="Infinite loop" FlowDirection="RightToLeft"
-                  HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="10" Margin="5,0,0,0">
-        </CheckBox>
 
-        <Label Grid.Row="3" Grid.Column="2" Content="Playback count:"
-          HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="10"/>
+        <Label Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="2" Content="Playback count: " FontSize="14" FontFamily="Bahnschrift" VerticalAlignment="Center" HorizontalAlignment="Left"/>
 
-        <TextBox Grid.Row="3" Grid.Column="3" Height="15" Width="30" HorizontalAlignment="Left"/>
+        <TextBox x:Name="tbPlaybackCount" Grid.Row="2" Grid.Column="3" Height="20" Width="30" Text="∞" FontSize="16" FontFamily="Bahnschrift"/>
 
 
     </Grid>
